
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "date_rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
time = { version = "0.3.44", features = ["macros"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
